things unclear:
wchar_t/L"string" purpose
switch vs callbacks (virtuals)

latests controls:
F2 to start and end recording
F6 or alt+F4 quits the game
Enter will spawn player
WASD, arrows moves him
Space - jumps

day94:
 
day93:
 bilinear texture filtering:
 sub pixel drawing: taking samples from 4 closest pixels and blending between them

day90-91:
 coordination explanation
 basis translation: new_vector = new_origin + a_x * new_y_axis + a_y * new_y_axis
 to rotate by (a):
 basis: {
	v3 origin;
	v3 x_axis = cos(a),sin(a)
    v3 y_axis = cos(a+90),sin(a+90) = -sin(a),cos(a) = perpendicular(x_axis)
 }

day87:
- seamless ground textures

day84: 
- ground

day77:
- some sort of stairs/ramp

day66:
- added simualtion regions
- added sword projectile

day60:
- added hitpoints
- color is now v4